std:: prefixing cleanup

--- a/docs/rn030.md
+++ b/docs/rn030.md
@@ -1,10 +1,14 @@
 ![cubans](../assets/cuban%20mechanic.jpg)
 
-# PMB Tools Release Notes v0.3.0
+# PMB Tools Release Notes v0.4.1 2/6/2021
+
+Code tidying re std:: prefixing / namespace issues, API/functionality unchanged
+
+# PMB Tools Release Notes v0.4.0
 
 # Bug Fixes
 
-N/A
+Fixed std:: naming issue
 
 ---
 
@@ -18,9 +22,7 @@ N/A
 
 ## Breaking
 
-* `_HAL_uniqueName` on ESP32 targets changed to return last 6 of MAC address, bringing it into line with ESP8266 version
-* `flattenMap` is now templated so that it can work with either `std::map` or `std::unordered_map`
-
+N/A
 ## Non-breaking
 
 N/A
