--- a/docs/rn030.md
+++ b/docs/rn030.md
@@ -1,20 +1,25 @@
 ![cubans](../assets/cuban%20mechanic.jpg)
 
-# PMB Tools Release Notes v0.4.1 2/6/2021
+---
+# PMB Tools Release Notes v0.5.0 28/6/2021
 
-Code tidying re std:: prefixing / namespace issues, API/functionality unchanged
+analog functions changed, ESP32 analogfeatures added
 
-# PMB Tools Release Notes v0.4.0
+---
 
 # Bug Fixes
 
-Fixed std:: naming issue
+N/A
 
 ---
 
 # New features
 
-N/A
+void        _HAL_analogFrequency(uint8_t pin,size_t f=PMB_PWM_DEFAULT);
+void        _HAL_analogWrite(uint8_t pin, uint32_t value);
+void        _HAL_attachAnalogPin(uint8_t pin);
+bool        _HAL_isAnalogInput(uint8_t p);
+bool        _HAL_isAnalogOutput(uint8_t p);
 
 ---
 
@@ -30,17 +35,15 @@ N/A
 
 # Deletions
 
-N/A
+``_HAL_isAnalog`` removed
 
 ---
 
-## Find me daily in these FB groups
+(c) 2021 Phil Bowles h4plugins@gmail.com
 
-* [Pangolin Support](https://www.facebook.com/groups/pangolinmqtt/)
-* [ESP8266 & ESP32 Microcontrollers](https://www.facebook.com/groups/2125820374390340/)
-* [ESP Developers](https://www.facebook.com/groups/ESP8266/)
-* [H4/Plugins support](https://www.facebook.com/groups/h4plugins)
-
-I am always grateful for any $upport on [Patreon](https://www.patreon.com/esparto) :)
-
-(C) 2021 Phil Bowles
+* [Support me on Patreon](https://patreon.com/esparto)
+* [Youtube channel (instructional videos)](https://www.youtube.com/channel/UCYi-Ko76_3p9hBUtleZRY6g)
+* [Facebook H4  Support / Discussion](https://www.facebook.com/groups/444344099599131/)
+* [Facebook General ESP8266 / ESP32](https://www.facebook.com/groups/2125820374390340/)
+* [Facebook ESP8266 Programming Questions](https://www.facebook.com/groups/esp8266questions/)
+* [Facebook ESP Developers (moderator)](https://www.facebook.com/groups/ESP8266/)
